--- a/ze/zel_meta_parameters.yaml
+++ b/ze/zel_meta_parameters.yaml
@@ -8,3 +8,9 @@ meta_parameters:
     - [ InScalar, pCoreCbs ]
   zelGetTracerApiProcAddrTable:
     - [ OutScalar, pDdiTable ]
+  zelLoaderGetVersions:
+    - [ InOutScalar, num_elems ]
+    - [ OutArray, versions, num_elems ]
+  zelLoaderGetVersionsInternal:
+    - [ InOutScalar, num_elems ]
+    - [ OutArray, versions, num_elems ]
