--- a/opencl/supported_extensions.yaml
+++ b/opencl/supported_extensions.yaml
@@ -2,6 +2,7 @@
 - clCreateProgramWithILKHR
 - clTerminateContextKHR
 - clCreateCommandQueueWithPropertiesKHR
+- clGetKernelSuggestedLocalWorkSizeKHR
 - clEnqueueMigrateMemObjectEXT
 - clGetICDLoaderInfoOCLICD
 - clCreateBufferWithPropertiesINTEL
