--- a/utils/xprof.sh.erb.in
+++ b/utils/xprof.sh.erb.in
@@ -24,12 +24,12 @@ display_help() {
     echo
     echo "  -h, --help         Show this screen"
     echo "  -e, --extended     Print information for each Hostname / Process / Thread / Device"
-    echo "  -t, --trace        Display the trace"
+    echo "  -t, --trace        Display trace"
     echo "  -l, --timeline     Dump the timeline"
-    echo "  -m, --mangle       Display mangled name"
-    echo "  -j, --json         The summary will be prrinted as json"
+    echo "  -m, --mangle       Use mangled name"
+    echo "  -j, --json         Summary will be printed as json"
     echo "  -a, --asm          Dump in your current directory low level kernels informations (asm,isa,visa,...)."
-    echo "  -f, --full         All the API call will be traced. By default and for performance raison, some of them will be ignored"
+    echo "  -f, --full         All API calls will be traced. By default and for performance raison, some of them will be ignored"
     echo "  --metadata         Display metadata"
     echo "  --max-name-size    Maximun size allowed for names"
     echo "  -r, --replay       <application> <application-arguments> will be traited as pathes to traces folders ($HOME/lttng-traces/...)"
