Fix wrong aray postprocessing in babeltrace_opencl.

--- a/opencl/babeltrace_opencl.in
+++ b/opencl/babeltrace_opencl.in
@@ -237,7 +237,7 @@ begin
         end
       end
       v = v.first unless i[1]
-      v = v.inspect if i[0].match("Z*") && !i[2]
+      v = v.inspect if i[0].match("Z\\\\*") && !i[2]
       v = "[ \#{v.join(", ")} ]" if i[1]
       v
     else
